changed background-image to background and added 'no-repeat center center fixed' to #bodyAbout. still trying to get background to look full on mobile site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 #bodyAbout {
-  background-image: url(./../images/bgAbout.jpg);
+  background: url(./../images/bgAbout.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 
